feat: Change status end point for category
